--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@10play/tentap-editor": "^0.5.21",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/slider": "^4.5.3",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-font": "~12.0.9",
