fixing for eas to build

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.0.2",
     "expo": "^51.0.37",
     "expo-constants": "^16.0.2",
+    "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.9",
     "expo-linking": "^6.3.1",
     "expo-router": "^3.5.23",
@@ -34,9 +35,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
-    "rive-react-native": "^7.3.0",
-    "sentiment": "^5.0.2",
-    "expo-dev-client": "~4.0.28"
+    "sentiment": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
