--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@10play/tentap-editor": "^0.5.21",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.5.3",
     "@react-navigation/native": "^6.0.2",
     "expo": "^51.0.37",
@@ -30,7 +31,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.20.0",
     "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "sentiment": "^5.0.2"
@@ -41,6 +45,7 @@
     "@types/sentiment": "^5.0.4",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "metro": "^0.80.12",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
