--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-screens": "^3.34.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
+    "rive-react-native": "^7.3.0",
     "sentiment": "^5.0.2"
   },
   "devDependencies": {
