--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.5.3",
+    "@react-native/metro-config": "^0.75.4",
     "@react-navigation/native": "^6.0.2",
     "expo": "^51.0.37",
+    "expo-asset": "~10.0.10",
     "expo-constants": "^16.0.2",
+    "expo-custom-assets": "^1.3.3",
     "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.9",
     "expo-linking": "^6.3.1",
