--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
