--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@10play/tentap-editor": "^0.5.21",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.5.3",
     "@react-native/metro-config": "^0.75.4",
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "~3.10.1",
