--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-modal": "^13.0.1",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.11.0",
